--- a/src/client/main-components/radio/styles.css
+++ b/src/client/main-components/radio/styles.css
@@ -114,7 +114,7 @@
 .radio-chat .chat-box ul li img {
   height: 30px;
   width: 30px;
-
+  vertical-align: middle;
   border-radius: 50%;
   margin: 5px;
 }
